Fixed left margin on header being 0.25in too large

--- a/postcss/style.pcss
+++ b/postcss/style.pcss
@@ -430,6 +430,6 @@ ul.skill-list .duration {
 /* Colors only on desktop */
 @media screen and ( min-width: 8.5in ) {
 	.header .primary {
-		padding: 0.375in 0 0.375in 0.5in;
+		padding: 0.375in 0 0.375in 0.25in;
 	}
 }
